Corriger les noms de variables et méthodes